# rav1d-safe

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT-HANDOFF.md  COPY-BUFFER-HANDOFF.md  Cargo.toml  DISJOINT_MUT_ANALYSIS.md  LICENSE-AGPL3  MSAC-SIMD-HANDOFF.md  RAYON-THREADING-SPEC.md  README.md  STRATEGY.md  THREADING-HANDOFF.md  justfile  lib.rs  test-vectors  wasmtime-guest-profile.json
.claude/: settings.local.json
.github/workflows/: ci.yml  disjoint-mut-ci.yml  fuzz.yml  test-vectors.yml
.zenbench/baselines/: after-simd-cleanup.json  before-msac-removal.json  checked.json  unchecked-with-sse2-msac.json  with-raw-simd.json
benches/: checked_vs_unchecked.rs  decode.rs  decode_avif.rs  rayon_overhead.rs  tango_decode.rs  thread_scaling.rs  threading_bench.rs  tile_threading.rs
benchmarks/: rayon_tile_2026-03-26.md  threading_20260324_073158.txt  threading_baseline_20260324.txt
crates/rav1d-disjoint-mut/: Cargo.toml  justfile
crates/rav1d-disjoint-mut/benches/: lock_overhead.rs
crates/rav1d-disjoint-mut/src/: align.rs  instrument.rs  lib.rs
examples/: decode_md5.rs  demo_simple.rs  dump_pixels.rs  managed_decode.rs  perframe_md5.rs  profile_avif.rs  profile_avif_mt.rs  profile_decode.rs  profile_ivf.rs
fuzz/: Cargo.toml  av1.dict
fuzz/fuzz_targets/: decode_obu.rs  parse_seq_header.rs
fuzz/regression/: crash-edc01b37467dd0bd3b7194cfa9e8a3eb14db4e28
fuzz/regression/cdef_tile_race/: crash-cdef-tile-overlap.avif
fuzz/regression/parse_seq_header/: crash-mv-add-overflow
include/common/: bitdepth.rs  intops.rs  validate.rs
include/dav1d/: common.rs  headers.rs  picture.rs
scripts/: extract_test_vectors.py
src/: atomic_level_cache.rs  c_box.rs  cdef.rs  cdef_apply.rs  cdf.rs  const_fn.rs  copy_guard.rs  cpu.rs  dav1d_api.rs  decode.rs  decode_test.rs  env.rs  error.rs  fg_apply.rs  filmgrain.rs  frame_pixel_data.rs  frame_rows.rs  in_range.rs  internal.rs  intra_edge.rs  ipred.rs  ipred_prepare.rs  ipred_rows.rs  itx.rs  itx_rows.rs  levels.rs  lf_apply.rs  lf_mask.rs  lib.rs  log.rs  loopfilter.rs  looprestoration.rs  lr_apply.rs  managed.rs  mc.rs  mc_rows.rs  msac.rs  obu.rs  picture.rs  plane_rows.rs  (+16 more)
src/safe_simd/: cdef.rs  cdef_arm.rs  cdef_wasm.rs  filmgrain.rs  filmgrain_arm.rs  ipred.rs  ipred_arm.rs  itx.rs  itx_arm.rs  itx_arm_neon_16x16.rs  itx_arm_neon_32.rs  itx_arm_neon_4x4.rs  itx_arm_neon_64.rs  itx_arm_neon_8x8.rs  itx_arm_neon_common.rs  itx_arm_neon_large_rect.rs  itx_arm_neon_rect.rs  itx_arm_neon_rect_large.rs  itx_arm_neon_wht.rs  itx_wasm.rs  loopfilter.rs  loopfilter_arm.rs  looprestoration.rs  looprestoration_arm.rs  mc.rs  mc_arm.rs  mc_wasm.rs  mod.rs  pal.rs  pixel_access.rs
tests/: decode_cpu_levels.rs  decode_md5_verify.rs  decode_permutations.rs  ivf_parser.rs  managed_api_test.rs  panic_safety_test.rs  reproduce_overlap.rs  reproduce_overlap_scalar.rs  test_4k_threading.rs  thread_cleanup_test.rs  tile_threading_overlap.rs
tests/crash_vectors/: crash_vectors  disjoint_mut_tile_overlap.obu
