[workspace]
members = [".", "crates/rav1d-disjoint-mut"]
exclude = ["fuzz"]

[package]
name = "rav1d-safe"
authors = ["Rav1d Developers", "Prossimo", "Imazen"]
version = "0.3.0"
edition = "2021"
rust-version = "1.93"
description = "Safe SIMD fork of rav1d - Rust AV1 decoder with archmage intrinsics"
license = "AGPL-3.0-or-later"
repository = "https://github.com/imazen/rav1d-safe"
readme = "README.md"
keywords = ["av1", "video", "decoder", "simd", "codec"]
categories = ["multimedia::video", "multimedia::encoding"]
exclude = [
    "*.c", "*.h", "*.in", "*.S", "*.orig",
    "meson*", "tests/", "doc/", "package/", "test-vectors/", "fuzz/", "scripts/",
    "src/arm/", "src/x86/",
    ".github/", "justfile", "gcovr.cfg", "retranspile.sh", "rust_out",
    "CLAUDE.md", "FEEDBACK.md", "STRATEGY.md", "SPEC.md",
    "CAPI.md", "CONTRIBUTING.md", "THANKS.md", "NEWS.dav1d",
    "DISJOINT_MUT_ANALYSIS.md", "REAL_UNSAFE_ANALYSIS.md", "TEST-VECTORS-README.md",
]

[lib]
path = "lib.rs"
crate-type = ["rlib"]

[dependencies]
aligned = "0.4"
assert_matches = "1.5.0"
atomig = { version = "0.4.0", features = ["derive"] }
bitflags = "2.4.0"
cfg-if = "1.0.0"
rav1d-disjoint-mut = { version = "0.3.0", path = "crates/rav1d-disjoint-mut", default-features = false, features = ["std", "aligned", "pic-buf", "zerocopy"] }
libc = "0.2"
parking_lot = "0.12.2"
paste = "1.0.14"
raw-cpuid = "11.0.1"
strum = { version = "0.27", features = ["derive"] }
to_method = "1.1.0"
zerocopy = { version = "0.8", features = ["derive"] }

# Safe SIMD dependencies
archmage = { version = "0.7", features = ["macros", "avx512"] }
safe_unaligned_simd = { version = "0.2.4", features = ["avx512"] }

[dev-dependencies]
archmage = { version = "0.7", features = ["macros", "avx512", "testable_dispatch"] }
divan = "0.1"
md5 = "0.8.0"
zenavif-parse = { version = "0.3", features = ["eager"] }

# tango-bench depends on libloading which doesn't support wasm32
[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
tango-bench = "0.6"

[build-dependencies]
cc = "1.0.79"
nasm-rs = { version = "0.3", features = ["parallel"] }

[features]
# Default: forbid(unsafe_code), multithreaded, bounds-checked
default = ["bitdepth_8", "bitdepth_16"]

# Unchecked slice access in hot paths (get_unchecked with debug_assert!).
# Also disables DisjointMut runtime overlap checking for hot-path
# instances (PicBuf, ArcSlice) via dangerously_unchecked().
unchecked = []

# C FFI API compatibility (unsafe extern "C" functions)
# Enables: dav1d_* C API, FFISafe, c_arc, c_box
c-ffi = ["unchecked", "dav1d-compat"]

# Export C symbols as dav1d_* (drop-in replacement for libdav1d).
# When disabled, symbols are exported as rav1d_* for side-by-side benchmarking.
dav1d-compat = []

# Hand-written ASM for entropy decoding (msac) and loopfilter only.
# Everything else stays in safe Rust SIMD.
partial_asm = ["unchecked"]

# Level 4: Hand-written assembly (maximum performance)
asm = ["c-ffi"]
asm_arm64_dotprod = ["asm"]
asm_arm64_i8mm = ["asm"]
asm_arm64_sve2 = ["asm"]

# Force scalar fallback for all SIMD dispatch (testing only)

# Run SIMD and scalar side-by-side, panic on any mismatch (testing only)
simd_test = []

# Bit depth support
bitdepth_8 = []
bitdepth_16 = []

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "decode_avif"
harness = false

[[bench]]
name = "tango_decode"
harness = false

[profile.bench]
codegen-units = 1
lto = "fat"

[profile.dev]
panic = "abort"

[profile.opt-dev]
inherits = "dev"
opt-level = 1

[profile.release]
codegen-units = 1
panic = "abort"
lto = "fat"
strip = false
debug = "line-tables-only"

[profile.release-with-debug]
inherits = "release"
debug = "line-tables-only"

[profile.checked-release]
inherits = "dev"
opt-level = 2
codegen-units = 16
